test/compile_errors/err_fstring_spec_int_mode_on_float.w
//! expect-check-fail: format mode requires integer type
fn main:
    let x = 3.14
    println(f"{x:x}")
